Notable changes in recent builds.

Maintained by hand, so what's "notable" is subjective! Contributors are
encouraged to add entries for their work.

All changes can be found via git - eg, for all changes after a build:
    git log -rb3xx:
or
    https://github.com/mhammond/pywin32/compare/b3xx...main

As of build 305, installation .exe files have been deprecated; see
https://mhammond.github.io/pywin32_installers.html .

Coming in build 311, as yet unreleased
--------------------------------------
* Fixed a regression that broke special __dunder__ methods with CoClass. (#1870, #2493, @Avasam, @geppi)
* Fixed `TypeError: cannot unpack non-iterable NoneType object` when registering an axscript client ScriptItem (#2513, @Avasam)
* Fixed a memory leak when SafeArrays are used as out parameters (@the-snork)
* Fixed dispatch handling for properties (@the-snork)
* Resolved a handful of deprecation warnings (#2567, #2576, @Avasam)
* The following classes now produce a valid `eval` string representation when calling `repr`: (#2573, @Avasam)
  * `pywin.tools.browser.HLIPythonObject`
  * `win32com.server.exception.COMException`
  * `win32comext.axscript.client.error.AXScriptException`
  * `win32comext.axscript.client.pyscript.NamedScriptAttribute`

Build 310, released 2025/03/16
------------------------------
* Fixed a regression where `win32com.client.DispatchWithEvents` and win32com.client.WithEvents` would throw a `TypeError` on the second call (#2491, @Avasam)
* Fixed regresion causing `win32com.shell.shell` to be missing a number of `IID`s. (#2487, @Avasam)
* As part of the above, Windows 7 is now minimum supported.

Build 309, released 2025/03/09
------------------------------
## pywin32
* Fixed Access Violation crashes in 3.12 by moving `PyWInObject_Free*` methods so GIL is acquired (#2467, @Mscht)
* Added support for relative path for `pywin32_postinstall`'s `-destination` argument (#2454, @Avasam)