@@ -19,7 +19,7 @@ import pythoncom
 
 # Note that we derive from com_error, which derives from builtin Exception
 # Also note that we don't support "self.args", as we don't support tuple-unpacking
-class COMException(pythoncom.com_error):  # type: ignore[name-defined] # Dynamic module
+class COMException(pythoncom.com_error):  # Dynamic module
     """An Exception object that is understood by the framework.
 
     If the framework is presented with an exception of type class,
