@@ -2637,9 +2637,6 @@ PYWIN_MODULE_INIT_FUNC(pythoncom)
 
     ADD_CONSTANT(DESCKIND_FUNCDESC);
     ADD_CONSTANT(DESCKIND_VARDESC);
-    // Expose the frozen flag, as Python itself doesn't!!
-    // @prop int|frozen|1 if the host is a frozen program, else 0
-    AddConstant(dict, "frozen", Py_FrozenFlag);
 
     // And finally some gross hacks relating to DCOM
     // I'm really not sure what a better option is!
@@ -2678,7 +2675,10 @@ PYWIN_MODULE_INIT_FUNC(pythoncom)
     // @prop int|dcom|1 if the system is DCOM aware, else 0.  Only Win95 without DCOM extensions should return 0
 
     // ### ALL THE @PROPERTY TAGS MUST COME AFTER THE LAST @PROP TAG!!
-    // @property int|pythoncom|frozen|1 if the host is a frozen program, else 0
+    // @property int|pythoncom|frozen|`pythoncom.frozen` used to expose `Py_FrozenFlag` from the C API.
+    // `Py_FrozenFlag` is deprecated since Python 3.12.
+    // Ever since pywin32 b200, loading the `win32com` module has silently been replacing `pythoncom.frozen` with
+    // `sys.frozen`. Use `getattr(sys, "frozen", False)` directly instead.
     // @property int|pythoncom|dcom|1 if the system is DCOM aware, else 0.  Only Win95 without DCOM extensions should
     // return 0
 
