@@ -3,8 +3,7 @@
 #define USES_IID_IExchangeFolderACLs
 
 #ifndef BUILD_FREEZE
-/* In a frozen environemt, these are likely to be picked
-up by the MAPI module */
+// In a frozen environemnt, these are likely to be picked up by the MAPI module
 
 #define USES_IID_IMsgStore
 #define USES_IID_IMAPISession
