@@ -6,7 +6,7 @@ skip_imports = [
   "IDLEenvironment", # Injects fast_readline into the IDLE auto-indent extension
   "pythoncom", # pythoncomXX.dll loader
   "pywintypes", # pywintypesXX.dll loader
-  "win32com", # Sets pythoncom.frozen and adds modules to path based on the registry
+  "win32com", # Adds modules to path based on the registry
   "win32traceutil", # Redirects output to win32trace remote collector
   "win32ui", # Must always be imported before dde
 ]
